@@ -5,22 +5,20 @@ import greencity.constant.AppConstant;
 import greencity.dto.econews.InterestingEcoNewsDto;
 import greencity.dto.notification.UbsNotificationDto;
 import greencity.dto.place.UpdatePlaceStatusWithUserEmailDto;
+import greencity.dto.user.UserManagementCreateDto;
 import greencity.dto.user.UserManagementDto;
 import greencity.dto.user.UserManagementUpdateDto;
 import greencity.dto.user.UserManagementVO;
-import greencity.dto.user.UserManagementViewDto;
 import greencity.dto.user.UserRoleDto;
-import greencity.dto.user.UserStatusDto;
 import greencity.dto.user.UserVO;
 import greencity.enums.EmailPreference;
 import greencity.enums.Role;
+import greencity.service.UserService;
 import java.security.Principal;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
-import greencity.enums.UserStatus;
 import greencity.message.ScheduledEmailMessage;
 import greencity.message.SendHabitNotification;
 import greencity.message.SendReportEmailMessage;
@@ -31,7 +29,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
@@ -43,10 +40,8 @@ import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.util.UriComponentsBuilder;
-import com.google.gson.Gson;
 import greencity.constant.RestTemplateLinks;
 import greencity.dto.PageableAdvancedDto;
-import greencity.dto.achievement.UserVOAchievement;
 import greencity.enums.EmailNotification;
 import static greencity.constant.AppConstant.AUTHORIZATION;
 
@@ -56,6 +51,7 @@ public class RestClient {
     private final RestTemplate restTemplate;
     private final String greenCityUserServerAddress;
     private final String greenCityUbsServerAddress;
+    private final UserService userService;
 
     private final HttpServletRequest httpServletRequest;
     private final JwtTool jwtTool;
@@ -84,12 +80,14 @@ public class RestClient {
     public RestClient(RestTemplate restTemplate,
         @Value("${greencityuser.server.address}") String greenCityUserServerAddress,
         @Value("${greencityubs.server.address}") String greenCityUbsServerAddress,
+        UserService userService,
         HttpServletRequest httpServletRequest,
         JwtTool jwtTool,
         @Value("${spring.liquibase.parameters.service-email}") String systemEmail) {
         this.restTemplate = restTemplate;
         this.greenCityUserServerAddress = greenCityUserServerAddress;
         this.httpServletRequest = httpServletRequest;
+        this.userService = userService;
         this.jwtTool = jwtTool;
         this.systemEmail = systemEmail;
         this.greenCityUbsServerAddress = greenCityUbsServerAddress;
@@ -141,7 +139,11 @@ public class RestClient {
             + RestTemplateLinks.EMAIL_NOTIFICATION + emailNotification,
             HttpMethod.GET, entity, new ParameterizedTypeReference<>() {
             });
-        return exchange.getBody();
+        List<UserVO> users = exchange.getBody();
+        if (users != null) {
+            userService.fillGreenCityInfoInUsers(users);
+        }
+        return users;
     }
 
     /**
@@ -181,8 +183,12 @@ public class RestClient {
         HttpEntity<String> entity = new HttpEntity<>(setHeader());
         UriComponentsBuilder url = UriComponentsBuilder.fromHttpUrl(greenCityUserServerAddress
             + RestTemplateLinks.USER_FIND_BY_EMAIL).queryParam(USER_EMAIL_QUERY_PARAM, email);
-        return restTemplate.exchange(url.toUriString(), HttpMethod.GET,
+        UserVO user = restTemplate.exchange(url.toUriString(), HttpMethod.GET,
             entity, UserVO.class).getBody();
+        if (user != null) {
+            userService.fillGreenCityInfoInUsers(List.of(user));
+        }
+        return user;
     }
 
     /**
@@ -192,68 +198,28 @@ public class RestClient {
      * @return {@link UserVO}
      */
     public UserVO findById(Long id) {
-        HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        return restTemplate.exchange(greenCityUserServerAddress
-            + RestTemplateLinks.USER_FIND_BY_ID + RestTemplateLinks.ID + id, HttpMethod.GET, entity, UserVO.class)
-            .getBody();
+        String email = userService.findById(id).getEmail();
+        return findByEmail(email);
     }
 
     /**
-     * Method that allow you to find {@link UserVO} by ID.
+     * Find {@link UserManagementVO} for management by email.
      *
      * @param id a value of {@link Long}
-     * @return {@link UserVO}
+     * @return a dto of {@link UserManagementVO}.
      */
-    public UserVOAchievement findUserForAchievement(Long id) {
+    public UserManagementVO findUserForManagement(Long id) {
+        UserVO user = userService.findById(id);
         HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        return restTemplate.exchange(greenCityUserServerAddress
-            + RestTemplateLinks.USER_FIND_BY_ID_FOR_ACHIEVEMENT + RestTemplateLinks.ID + id,
-            HttpMethod.GET, entity, UserVOAchievement.class).getBody();
-    }
-
-    /**
-     * Find {@link UserVO} for management by page .
-     *
-     * @param pageable a value with pageable configuration.
-     * @return a dto of {@link PageableAdvancedDto}.
-     */
-    public PageableAdvancedDto<UserManagementDto> findUserForManagementByPage(Pageable pageable) {
-        Sort sort = pageable.getSort();
-        StringBuilder orderUrl = new StringBuilder();
-        if (!sort.isEmpty()) {
-            for (Sort.Order order : sort) {
-                orderUrl.append(orderUrl).append(order.getProperty()).append(",").append(order.getDirection());
-            }
-        }
-        HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        return restTemplate.exchange(greenCityUserServerAddress
-            + RestTemplateLinks.USER_FIND_USER_FOR_MANAGEMENT + RestTemplateLinks.PAGE + pageable
-                .getPageNumber()
-            + RestTemplateLinks.SIZE + pageable
-                .getPageSize()
-            + RestTemplateLinks.SORT + orderUrl,
+        UserManagementVO dto = restTemplate.exchange(greenCityUserServerAddress
+            + RestTemplateLinks.USER_FIND_USER_FOR_MANAGEMENT + RestTemplateLinks.EMAIL + user.getEmail(),
             HttpMethod.GET, entity,
-            new ParameterizedTypeReference<PageableAdvancedDto<UserManagementDto>>() {
+            new ParameterizedTypeReference<UserManagementVO>() {
             }).getBody();
-    }
-
-    /**
-     * Method for getting UserVO by search query.
-     *
-     * @param pageable {@link Pageable}.
-     * @param query    query to search
-     * @return {@link PageableAdvancedDto} of {@link UserManagementDto} instances.
-     */
-    public PageableAdvancedDto<UserManagementDto> searchBy(Pageable pageable, String query) {
-        HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        UriComponentsBuilder url = UriComponentsBuilder.fromHttpUrl(greenCityUserServerAddress
-            + RestTemplateLinks.SEARCH_BY)
-            .queryParam("page", pageable.getPageNumber())
-            .queryParam("size", pageable.getPageSize())
-            .queryParam("query", query);
-        return restTemplate.exchange(url.toUriString(), HttpMethod.GET, entity,
-            new ParameterizedTypeReference<PageableAdvancedDto<UserManagementDto>>() {
-            }).getBody();
+        if (dto != null) {
+            userService.fillGreenCityInfoInUsers(List.of(dto));
+        }
+        return dto;
     }
 
     /**
@@ -267,7 +233,7 @@ public class RestClient {
         headers.setContentType(MediaType.APPLICATION_JSON);
         HttpEntity<UserManagementUpdateDto> entity = new HttpEntity<>(updateDto, headers);
         restTemplate.exchange(greenCityUserServerAddress
-            + RestTemplateLinks.USER + "/" + userDto.getId(), HttpMethod.PUT, entity, Object.class);
+            + RestTemplateLinks.USER, HttpMethod.PUT, entity, Object.class);
         log.info("User with id {} has been updated", userDto.getId());
     }
 
@@ -275,9 +241,8 @@ public class RestClient {
         return UserManagementUpdateDto.builder()
             .name(userDto.getName())
             .email(userDto.getEmail())
-            .userCredo(userDto.getUserCredo())
             .role(userDto.getRole())
-            .userStatus(userDto.getUserStatus())
+            .status(userDto.getStatus())
             .build();
     }
 
@@ -288,29 +253,13 @@ public class RestClient {
      * @param role new role
      */
     public void updateRole(Long id, Role role) {
+        String email = userService.findById(id).getEmail();
         String url = greenCityUserServerAddress
-            + RestTemplateLinks.USER + "/" + id + "/role";
+            + RestTemplateLinks.USER + "/role" + RestTemplateLinks.EMAIL + email;
         HttpHeaders headers = setHeader();
         headers.setContentType(MediaType.APPLICATION_JSON);
         UserRoleDto userRoleDto = new UserRoleDto(role);
         HttpEntity<UserRoleDto> entity = new HttpEntity<>(userRoleDto, headers);
-        restTemplate.exchange(url, HttpMethod.PATCH, entity, Object.class);
-    }
-
-    /**
-     * Method for sending change status request.
-     *
-     * @param id     of user whose status is being changed
-     * @param status new status
-     *
-     * @author Anton Bondar
-     */
-    public void updateStatus(Long id, UserStatus status) {
-        String url = greenCityUserServerAddress + RestTemplateLinks.USER + "/status";
-        HttpHeaders headers = setHeader();
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        UserStatusDto userStatusDto = new UserStatusDto(id, status);
-        HttpEntity<UserStatusDto> entity = new HttpEntity<>(userStatusDto, headers);
         restTemplate.exchange(url, HttpMethod.PATCH, entity, Object.class);
     }
 
@@ -324,8 +273,12 @@ public class RestClient {
         ResponseEntity<UserVO[]> exchange = restTemplate.exchange(greenCityUserServerAddress
             + RestTemplateLinks.USER_FIND_ALL, HttpMethod.GET, entity, UserVO[].class);
         UserVO[] responseDtos = exchange.getBody();
-        assert responseDtos != null;
-        return Arrays.asList(responseDtos);
+        if (responseDtos != null) {
+            List<UserVO> users = Arrays.asList(responseDtos);
+            userService.fillGreenCityInfoInUsers(users);
+            return users;
+        }
+        return List.of();
     }
 
     /**
@@ -333,58 +286,19 @@ public class RestClient {
      *
      * @return {@link List} of {@link UserVO} instances.
      */
-    public List<UserManagementDto> findUserFriendsByUserId(Long id) {
+    public List<UserManagementVO> findUserFriendsByUserId(Long id) {
+        String email = userService.findById(id).getEmail();
         HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        ResponseEntity<UserManagementDto[]> exchange = restTemplate.exchange(greenCityUserServerAddress
-            + RestTemplateLinks.USER + "/" + id + RestTemplateLinks.FRIENDS, HttpMethod.GET, entity,
-            UserManagementDto[].class);
-        UserManagementDto[] responseDtos = exchange.getBody();
-        assert responseDtos != null;
-        return Arrays.asList(responseDtos);
-    }
-
-    /**
-     * Method that allow you to find not 'DEACTIVATED' {@link UserVO} by email.
-     *
-     * @param email - {@link UserVO}'s email
-     * @return {@link UserVO}
-     */
-    public Optional<UserVO> findNotDeactivatedByEmail(String email) {
-        HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        UserVO body = restTemplate.exchange(greenCityUserServerAddress
-            + RestTemplateLinks.USER_FIND_NOT_DEACTIVATED_BY_EMAIL + RestTemplateLinks.EMAIL
-            + email, HttpMethod.GET, entity, UserVO.class)
-            .getBody();
-        assert body != null;
-        return Optional.of(body);
-    }
-
-    /**
-     * Method find user id by email.
-     *
-     * @param email of {@link UserVO}
-     */
-    public Long findIdByEmail(String email) {
-        HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        UriComponentsBuilder url = UriComponentsBuilder.fromHttpUrl(greenCityUserServerAddress
-            + RestTemplateLinks.USER_FIND_ID_BY_EMAIL).queryParam(USER_EMAIL_QUERY_PARAM, email);
-        return restTemplate.exchange(url.toUriString(), HttpMethod.GET, entity, Long.class).getBody();
-    }
-
-    /**
-     * Method for setting {@link UserVO}'s status to DEACTIVATED, so the user will
-     * not be able to log in into the system.
-     *
-     * @param userId      - {@link UserVO}'s id
-     * @param userReasons {@link List} of {@link String}.
-     */
-    public void deactivateUser(Long userId, List<String> userReasons) {
-        HttpHeaders headers = setHeader();
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        HttpEntity<List<String>> entity = new HttpEntity<>(userReasons, headers);
-        restTemplate.exchange(greenCityUserServerAddress + RestTemplateLinks.USER_DEACTIVATE
-            + RestTemplateLinks.ID + userId, HttpMethod.PUT, entity, Object.class);
-        log.info("User with id {} has been deactivated", userId);
+        ResponseEntity<UserManagementVO[]> exchange = restTemplate.exchange(greenCityUserServerAddress
+            + RestTemplateLinks.USER + RestTemplateLinks.FRIENDS + RestTemplateLinks.EMAIL + email, HttpMethod.GET,
+            entity, UserManagementVO[].class);
+        UserManagementVO[] responseDtos = exchange.getBody();
+        if (responseDtos != null) {
+            List<UserManagementVO> users = Arrays.asList(responseDtos);
+            userService.fillGreenCityInfoInUsers(users);
+            return users;
+        }
+        return List.of();
     }
 
     /**
@@ -394,58 +308,12 @@ public class RestClient {
      * @return current user language {@link String}.
      */
     public String getUserLang(Long userId) {
+        String email = userService.findById(userId).getEmail();
         HttpEntity<String> entity = new HttpEntity<>(setHeader());
         String body = restTemplate.exchange(greenCityUserServerAddress + RestTemplateLinks.USER_LANG
-            + RestTemplateLinks.ID + userId, HttpMethod.GET, entity, String.class).getBody();
+            + RestTemplateLinks.EMAIL + email, HttpMethod.GET, entity, String.class).getBody();
         assert body != null;
         return body;
-    }
-
-    /**
-     * Method for setting {@link UserVO}'s status to ACTIVATED.
-     *
-     * @param userId - {@link UserVO}'s id
-     */
-    public void setActivatedStatus(Long userId) {
-        HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        restTemplate.exchange(greenCityUserServerAddress + RestTemplateLinks.USER_ACTIVATE
-            + RestTemplateLinks.ID + userId, HttpMethod.PUT, entity, Object.class);
-    }
-
-    /**
-     * Method for getting a {@link List} of {@link String} - reasons for
-     * deactivation of the current user.
-     *
-     * @param userId    {@link Long} - user's id.
-     * @param adminLang {@link String} - current administrator language.
-     * @return {@link List} of {@link String} - reasons for deactivation of the
-     *         current user.
-     */
-    public List<String> getDeactivationReason(Long userId, String adminLang) {
-        HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        String[] reasonDtos = restTemplate.exchange(greenCityUserServerAddress + RestTemplateLinks.USER_REASONS
-            + RestTemplateLinks.ID + userId
-            + RestTemplateLinks.ADMIN_LANG + adminLang, HttpMethod.GET, entity, String[].class).getBody();
-        assert reasonDtos != null;
-        return Arrays.asList(reasonDtos);
-    }
-
-    /**
-     * Method for setting to a list of {@link UserVO} status DEACTIVATED, so the
-     * users will not be able to log in into the system.
-     *
-     * @param listId {@link List} populated with ids of {@link UserVO} to be
-     *               deleted.
-     */
-    public ResponseEntity<Long[]> deactivateAllUsers(List<Long> listId) {
-        Gson gson = new Gson();
-        String json = gson.toJson(listId);
-        HttpHeaders headers = setHeader();
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        HttpEntity<String> entity = new HttpEntity<>(json, headers);
-        return restTemplate.exchange(greenCityUserServerAddress
-            + RestTemplateLinks.USER_DEACTIVATE_ALL
-            + RestTemplateLinks.ID + listId, HttpMethod.PUT, entity, Long[].class);
     }
 
     /**
@@ -453,10 +321,10 @@ public class RestClient {
      *
      * @param userDto dto with updated fields.
      */
-    public void managementRegisterUser(UserManagementDto userDto) {
+    public void managementRegisterUser(UserManagementCreateDto userDto) {
         HttpHeaders headers = setHeader();
         headers.setContentType(MediaType.APPLICATION_JSON);
-        HttpEntity<UserManagementDto> entity = new HttpEntity<>(userDto, headers);
+        HttpEntity<UserManagementCreateDto> entity = new HttpEntity<>(userDto, headers);
         restTemplate.exchange(greenCityUserServerAddress
             + RestTemplateLinks.OWN_SECURITY_REGISTER, HttpMethod.POST, entity, Object.class);
     }
@@ -497,16 +365,6 @@ public class RestClient {
     }
 
     /**
-     * Delete from the database users that have status 'DEACTIVATED' and last
-     * visited the site 2 years ago.
-     */
-    public void scheduleDeleteDeactivatedUsers() {
-        HttpEntity<String> entity = new HttpEntity<>(new HttpHeaders());
-        restTemplate.exchange(greenCityUserServerAddress + RestTemplateLinks.DELETE_DEACTIVATED_USERS,
-            HttpMethod.POST, entity, Object.class);
-    }
-
-    /**
      * send SendHabitNotification to GreenCityUser.
      *
      * @param sendHabitNotification with information for sending email to each user
@@ -518,35 +376,6 @@ public class RestClient {
         HttpEntity<SendHabitNotification> entity = new HttpEntity<>(sendHabitNotification, headers);
         restTemplate.exchange(greenCityUserServerAddress
             + RestTemplateLinks.SEND_HABIT_NOTIFICATION, HttpMethod.POST, entity, Object.class);
-    }
-
-    /**
-     * Method that allow you to search users by several values
-     * {@link UserManagementViewDto}.
-     *
-     * @param pageable    {@link Pageable}.
-     * @param userViewDto for search User.
-     * @return a dto of {@link PageableAdvancedDto}.
-     */
-    public PageableAdvancedDto<UserManagementVO> search(Pageable pageable, UserManagementViewDto userViewDto) {
-        Sort sort = pageable.getSort();
-        StringBuilder orderUrl = new StringBuilder();
-        if (!sort.isEmpty()) {
-            for (Sort.Order order : sort) {
-                orderUrl.append(orderUrl).append(order.getProperty()).append(",").append(order.getDirection());
-            }
-        }
-        HttpHeaders headers = setHeader();
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        HttpEntity<UserManagementViewDto> entity = new HttpEntity<>(userViewDto, headers);
-        return restTemplate.exchange(
-            greenCityUserServerAddress + RestTemplateLinks.USER_SEARCH + RestTemplateLinks.PAGE
-                + pageable.getPageNumber()
-                + RestTemplateLinks.SIZE + pageable.getPageSize()
-                + RestTemplateLinks.SORT + orderUrl,
-            HttpMethod.POST, entity,
-            new ParameterizedTypeReference<PageableAdvancedDto<UserManagementVO>>() {
-            }).getBody();
     }
 
     /**
