@@ -1,26 +1,30 @@
 package greencity.service;
 
+import static greencity.utils.SpecificationUtils.setValueIfNotEmpty;
 import greencity.achievement.AchievementCalculation;
 import greencity.client.RestClient;
+import greencity.client.UserRemoteClient;
+import greencity.constant.AppConstant;
 import greencity.constant.CacheConstants;
 import greencity.constant.ErrorMessage;
 import greencity.dto.PageableAdvancedDto;
 import greencity.dto.PageableDto;
-import greencity.dto.econews.EcoNewsGroupedTagsDto;
-import greencity.dto.econews.EcoNewsDto;
 import greencity.dto.econews.AddEcoNewsDtoRequest;
+import greencity.dto.econews.AddEcoNewsDtoResponse;
 import greencity.dto.econews.EcoNewContentSourceDto;
+import greencity.dto.econews.EcoNewsDto;
+import greencity.dto.econews.EcoNewsDtoManagement;
 import greencity.dto.econews.EcoNewsGenericDto;
+import greencity.dto.econews.EcoNewsGroupedTagsDto;
+import greencity.dto.econews.EcoNewsVO;
 import greencity.dto.econews.EcoNewsViewDto;
 import greencity.dto.econews.UpdateEcoNewsDto;
-import greencity.dto.econews.EcoNewsDtoManagement;
-import greencity.dto.econews.EcoNewsVO;
-import greencity.dto.econews.AddEcoNewsDtoResponse;
 import greencity.dto.notification.LikeNotificationDto;
 import greencity.dto.ratingstatistics.RatingStatisticsViewDto;
 import greencity.dto.search.SearchNewsDto;
 import greencity.dto.tag.TagVO;
 import greencity.dto.user.EcoNewsAuthorDto;
+import greencity.dto.user.UserClaims;
 import greencity.dto.user.UserVO;
 import greencity.entity.EcoNews;
 import greencity.entity.EcoNews_;
@@ -32,11 +36,13 @@ import greencity.enums.AchievementCategoryType;
 import greencity.enums.NotificationType;
 import greencity.enums.Role;
 import greencity.enums.TagType;
+import greencity.mapping.PageableAdvancedDtoMapper;
 import greencity.rating.constant.RatingPointsNames;
 import greencity.repository.RatingPointsRepo;
 import greencity.exception.exceptions.BadRequestException;
 import greencity.exception.exceptions.NotFoundException;
 import greencity.exception.exceptions.NotSavedException;
+import greencity.filters.EcoNewsSearchSpecification;
 import greencity.filters.EcoNewsSpecification;
 import greencity.filters.SearchCriteria;
 import greencity.rating.RatingCalculation;
@@ -46,6 +52,23 @@ import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.Join;
 import jakarta.persistence.criteria.Predicate;
 import jakarta.persistence.criteria.Root;
+import java.util.Optional;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.modelmapper.ModelMapper;
+import org.modelmapper.TypeToken;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -53,39 +76,27 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Set;
 import java.util.stream.Collectors;
-import lombok.RequiredArgsConstructor;
-import org.apache.commons.collections4.CollectionUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.modelmapper.ModelMapper;
-import org.modelmapper.TypeToken;
-import org.springframework.cache.annotation.CacheEvict;
-import org.springframework.cache.annotation.EnableCaching;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.reactive.function.client.WebClientRequestException;
+import org.springframework.web.reactive.function.client.WebClientResponseException;
 
 @Service
-@EnableCaching
 @Transactional
 @RequiredArgsConstructor
+@Slf4j
 public class EcoNewsServiceImpl implements EcoNewsService {
     private final EcoNewsRepo ecoNewsRepo;
     private final RestClient restClient;
     private final ModelMapper modelMapper;
     private final TagsService tagService;
-    private final FileService fileService;
+    private final UserRemoteClient userRemoteClient;
     private final AchievementCalculation achievementCalculation;
     private final RatingCalculation ratingCalculation;
-    private final List<String> languageCode = List.of("en", "ua");
+    private final List<String> languageCode = List.of("en", "uk");
     private final UserService userService;
     private final UserRepo userRepo;
-    private final CommentService commentService;
     private final UserNotificationService userNotificationService;
     private final RatingPointsRepo ratingPointsRepo;
+    private final PageableAdvancedDtoMapper<EcoNewsGenericDto> pageableAdvancedDtoMapper;
 
     private static final String ECO_NEWS_TITLE = "title";
     private static final String ECO_NEWS_JOIN_TAG = "tags";
@@ -117,8 +128,8 @@ public class EcoNewsServiceImpl implements EcoNewsService {
     @Override
     public EcoNewsGenericDto saveEcoNews(AddEcoNewsDtoRequest addEcoNewsDtoRequest, MultipartFile image, String email) {
         EcoNews toSave = genericSave(addEcoNewsDtoRequest, image, email);
-        final EcoNewsGenericDto ecoNewsDto = getEcoNewsGenericDtoWithAllTags(toSave);
-        UserVO user = userService.findByEmail(email);
+        final EcoNewsGenericDto ecoNewsDto = modelMapper.map(toSave, EcoNewsGenericDto.class);
+        UserVO user = userService.findNotDeactivatedByEmail(email);
         ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow(RatingPointsNames.CREATE_NEWS), user);
         achievementCalculation.calculateAchievement(user,
             AchievementCategoryType.CREATE_NEWS, AchievementAction.ASSIGN);
@@ -151,20 +162,13 @@ public class EcoNewsServiceImpl implements EcoNewsService {
         String title,
         Long authorId,
         boolean favorite,
-        String email) {
-        Long currentUserId = (email != null && !email.isEmpty()) ? getUserIdByEmail(email) : null;
-
-        return CollectionUtils.isEmpty(tags) && StringUtils.isEmpty(title) && authorId == null && !favorite
-            ? buildPageableAdvancedGenericDto(ecoNewsRepo.findAll(
-                PageRequest.of(page.getPageNumber(), page.getPageSize(),
-                    Sort.by(Sort.Direction.DESC, "creationDate"))),
-                currentUserId)
-            : buildPageableAdvancedGenericDto(ecoNewsRepo.findAll(
-                (root, query, criteriaBuilder) -> getPredicate(root, criteriaBuilder, tags, title, authorId, favorite,
-                    currentUserId),
-                PageRequest.of(page.getPageNumber(), page.getPageSize(),
-                    Sort.by(Sort.Direction.DESC, "creationDate"))),
-                currentUserId);
+        Long currentUserId) {
+        return buildPageableAdvancedGenericDto(ecoNewsRepo.findAll(
+            (root, query, criteriaBuilder) -> getPredicate(root, criteriaBuilder, tags, title, authorId, favorite,
+                currentUserId),
+            PageRequest.of(page.getPageNumber(), page.getPageSize(),
+                Sort.by(Sort.Direction.DESC, "creationDate"))),
+            currentUserId);
     }
 
     private PageableAdvancedDto<EcoNewsDto> buildPageableAdvancedDto(Page<EcoNews> ecoNewsPage) {
@@ -187,19 +191,18 @@ public class EcoNewsServiceImpl implements EcoNewsService {
     private PageableAdvancedDto<EcoNewsGenericDto> buildPageableAdvancedGenericDto(Page<EcoNews> ecoNewsPage,
         Long currentUserId) {
         List<EcoNewsGenericDto> ecoNewsDtos = ecoNewsPage.stream()
-            .map(ecoNews -> getEcoNewsGenericDtoWithEnTags(ecoNews, currentUserId))
-            .collect(Collectors.toList());
+            .map(ecoNews -> {
+                EcoNewsGenericDto dto = modelMapper.map(ecoNews, EcoNewsGenericDto.class);
+                if (isCurrentUserFollower(ecoNews, currentUserId)) {
+                    dto.setFavorite(true);
+                }
+                return dto;
+            })
+            .toList();
 
-        return new PageableAdvancedDto<>(
-            ecoNewsDtos,
-            ecoNewsPage.getTotalElements(),
-            ecoNewsPage.getPageable().getPageNumber(),
-            ecoNewsPage.getTotalPages(),
-            ecoNewsPage.getNumber(),
-            ecoNewsPage.hasPrevious(),
-            ecoNewsPage.hasNext(),
-            ecoNewsPage.isFirst(),
-            ecoNewsPage.isLast());
+        Page<EcoNewsGenericDto> pageResult = new PageImpl<>(ecoNewsDtos, ecoNewsPage.getPageable(),
+            ecoNewsPage.getTotalElements());
+        return pageableAdvancedDtoMapper.convert(pageResult);
     }
 
     /**
@@ -224,7 +227,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
         List<String> tags = new ArrayList<>();
         for (String lang : languageCode) {
             tags.addAll(ecoNews.getTags().stream().flatMap(t -> t.getTagTranslations().stream())
-                .filter(tagTranslation -> tagTranslation.getLanguage().getCode().equals(lang))
+                .filter(tagTranslation -> tagTranslation.getLanguageCode().equals(lang))
                 .map(TagTranslation::getName)
                 .toList());
         }
@@ -257,7 +260,11 @@ public class EcoNewsServiceImpl implements EcoNewsService {
 
     @Override
     public PageableDto<SearchNewsDto> search(Pageable pageable, String searchQuery, Boolean isFavorite, Long userId) {
-        return getSearchNewsDtoPageableDto(ecoNewsRepo.find(pageable, searchQuery, isFavorite, userId));
+        List<SearchCriteria> criteriaList = new ArrayList<>();
+        setValueIfNotEmpty(criteriaList, "text", searchQuery);
+        setValueIfNotEmpty(criteriaList, "isFavorite", isFavorite);
+        Specification<EcoNews> specification = new EcoNewsSearchSpecification(criteriaList, userId);
+        return getSearchNewsDtoPageableDto(ecoNewsRepo.findAll(specification, pageable));
     }
 
     private PageableDto<SearchNewsDto> getSearchNewsDtoPageableDto(Page<EcoNews> page) {
@@ -280,6 +287,16 @@ public class EcoNewsServiceImpl implements EcoNewsService {
         return authorId == null ? ecoNewsRepo.count() : ecoNewsRepo.countByAuthorId(authorId);
     }
 
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public Long getAmountOfPublishedNews(String authorEmail) {
+        Optional<User> author = userRepo.findByEmail(authorEmail);
+        Long authorId = author.map(User::getId).orElse(null);
+        return getAmountOfPublishedNews(authorId);
+    }
+
     private void enhanceWithNewManagementData(EcoNews toUpdate, EcoNewsDtoManagement ecoNewsDtoManagement,
         MultipartFile image) {
         toUpdate.setTitle(ecoNewsDtoManagement.getTitle());
@@ -289,8 +306,12 @@ public class EcoNewsServiceImpl implements EcoNewsService {
                 new TypeToken<List<Tag>>() {
                 }.getType()));
         if (image != null) {
-            fileService.delete(toUpdate.getImagePath());
-            toUpdate.setImagePath(fileService.upload(image));
+            try {
+                userRemoteClient.deleteFile(toUpdate.getImagePath());
+                toUpdate.setImagePath(userRemoteClient.uploadFile(image));
+            } catch (WebClientRequestException | WebClientResponseException e) {
+                log.warn(AppConstant.USER_SERVICE_UNAVAILABLE_LOG, e.getMessage());
+            }
         }
     }
 
@@ -305,8 +326,12 @@ public class EcoNewsServiceImpl implements EcoNewsService {
             new TypeToken<List<Tag>>() {
             }.getType()));
         if (image != null) {
-            fileService.delete(toUpdate.getImagePath());
-            toUpdate.setImagePath(fileService.upload(image));
+            try {
+                userRemoteClient.deleteFile(toUpdate.getImagePath());
+                toUpdate.setImagePath(userRemoteClient.uploadFile(image));
+            } catch (WebClientRequestException | WebClientResponseException e) {
+                log.warn(AppConstant.USER_SERVICE_UNAVAILABLE_LOG, e.getMessage());
+            }
         }
     }
 
@@ -321,7 +346,11 @@ public class EcoNewsServiceImpl implements EcoNewsService {
         try {
             ecoNewsRepo.save(toUpdate);
         } catch (Exception e) {
-            fileService.delete(toUpdate.getImagePath());
+            try {
+                userRemoteClient.deleteFile(toUpdate.getImagePath());
+            } catch (WebClientRequestException | WebClientResponseException webException) {
+                log.warn(AppConstant.USER_SERVICE_UNAVAILABLE_LOG, webException.getMessage());
+            }
             throw new NotSavedException(ErrorMessage.ECO_NEWS_NOT_SAVED);
         }
     }
@@ -331,27 +360,28 @@ public class EcoNewsServiceImpl implements EcoNewsService {
      */
     @CacheEvict(value = CacheConstants.NEWEST_ECO_NEWS_CACHE_NAME, allEntries = true)
     @Override
-    public EcoNewsGenericDto update(UpdateEcoNewsDto updateEcoNewsDto, MultipartFile image, UserVO user) {
+    public EcoNewsGenericDto update(UpdateEcoNewsDto updateEcoNewsDto, MultipartFile image, UserClaims userClaims) {
         EcoNews toUpdate = findEcoNewsById(updateEcoNewsDto.getId());
-        if (user.getRole() != Role.ROLE_ADMIN && !user.getId().equals(toUpdate.getAuthor().getId())) {
+        if (!userClaims.roles().contains(Role.ROLE_ADMIN)
+            && !userClaims.userId().equals(toUpdate.getAuthor().getId())) {
             throw new BadRequestException(ErrorMessage.USER_HAS_NO_PERMISSION);
         }
         enhanceWithNewData(toUpdate, updateEcoNewsDto, image);
         try {
             ecoNewsRepo.save(toUpdate);
         } catch (Exception e) {
-            fileService.delete(toUpdate.getImagePath());
+            userRemoteClient.deleteFile(toUpdate.getImagePath());
             throw new NotSavedException(ErrorMessage.ECO_NEWS_NOT_SAVED);
         }
-        return getEcoNewsGenericDtoWithAllTags(toUpdate);
+        return modelMapper.map(toUpdate, EcoNewsGenericDto.class);
     }
 
     @Override
-    public void addToFavorites(Long ecoNewsId, String email) {
+    public void addToFavorites(Long ecoNewsId, Long userId) {
         EcoNews ecoNews = findEcoNewsById(ecoNewsId);
 
-        User currentUser = userRepo.findByEmail(email)
-            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
+        User currentUser = userRepo.findById(userId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId));
 
         if (ecoNews.getFollowers().contains(currentUser)) {
             throw new BadRequestException(ErrorMessage.USER_HAS_ALREADY_ADDED_ECO_NEW_TO_FAVORITES);
@@ -362,11 +392,11 @@ public class EcoNewsServiceImpl implements EcoNewsService {
     }
 
     @Override
-    public void removeFromFavorites(Long ecoNewsId, String email) {
+    public void removeFromFavorites(Long ecoNewsId, Long userId) {
         EcoNews ecoNews = findEcoNewsById(ecoNewsId);
 
-        User currentUser = userRepo.findByEmail(email)
-            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
+        User currentUser = userRepo.findById(userId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId));
 
         if (!ecoNews.getFollowers().contains(currentUser)) {
             throw new BadRequestException(ErrorMessage.ECO_NEW_NOT_IN_FAVORITES);
@@ -526,69 +556,10 @@ public class EcoNewsServiceImpl implements EcoNewsService {
         return criteriaList;
     }
 
-    private void setValueIfNotEmpty(List<SearchCriteria> searchCriteria, String key, String value) {
-        if (StringUtils.isNotEmpty(value)) {
-            searchCriteria.add(SearchCriteria.builder()
-                .key(key)
-                .type(key)
-                .value(value)
-                .build());
-        }
-    }
-
     private List<EcoNewsDto> mapEcoNewsListToEcoNewsDtoList(List<EcoNews> ecoNewsList) {
         return ecoNewsList.stream()
             .map(ecoNews -> modelMapper.map(ecoNews, EcoNewsDto.class))
             .toList();
-    }
-
-    private EcoNewsGenericDto getEcoNewsGenericDtoWithAllTags(EcoNews ecoNews) {
-        List<String> tags = ecoNews.getTags().stream()
-            .flatMap(t -> t.getTagTranslations().stream())
-            .map(TagTranslation::getName)
-            .collect(Collectors.toList());
-
-        return buildEcoNewsGenericDto(ecoNews, tags, null);
-    }
-
-    private EcoNewsGenericDto getEcoNewsGenericDtoWithEnTags(EcoNews ecoNews, Long currentUserId) {
-        List<String> tags = new ArrayList<>();
-        for (String language : languageCode) {
-            tags.addAll(ecoNews.getTags().stream()
-                .flatMap(t -> t.getTagTranslations().stream())
-                .filter(t -> t.getLanguage().getCode().equals(language))
-                .map(TagTranslation::getName)
-                .toList());
-        }
-
-        return buildEcoNewsGenericDto(ecoNews, tags, currentUserId);
-    }
-
-    private EcoNewsGenericDto buildEcoNewsGenericDto(EcoNews ecoNews, List<String> tags, Long currentUserId) {
-        User author = ecoNews.getAuthor();
-        EcoNewsAuthorDto ecoNewsAuthorDto = new EcoNewsAuthorDto(author.getId(), author.getName());
-
-        int countOfComments = commentService.countCommentsForEcoNews(ecoNews.getId());
-        int countOfEcoNews = ecoNewsRepo.totalCountOfCreationNews();
-
-        boolean isFavorite = isCurrentUserFollower(ecoNews, currentUserId);
-
-        return EcoNewsGenericDto.builder()
-            .id(ecoNews.getId())
-            .imagePath(ecoNews.getImagePath())
-            .author(ecoNewsAuthorDto)
-            .tagsEn(tags.stream().filter(tag -> tag.matches("^([A-Za-z-])+$")).collect(Collectors.toList()))
-            .tagsUk(tags.stream().filter(tag -> tag.matches("^([А-Яа-яієїґ'-])+$")).collect(Collectors.toList()))
-            .shortInfo(ecoNews.getShortInfo())
-            .content(ecoNews.getText())
-            .title(ecoNews.getTitle())
-            .creationDate(ecoNews.getCreationDate())
-            .source(ecoNews.getSource())
-            .likes(ecoNews.getUsersLikedNews() != null ? ecoNews.getUsersLikedNews().size() : 0)
-            .countComments(countOfComments)
-            .countOfEcoNews(countOfEcoNews)
-            .isFavorite(isFavorite)
-            .build();
     }
 
     private boolean isCurrentUserFollower(EcoNews ecoNews, Long currentUserId) {
@@ -598,8 +569,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
 
     private EcoNewsDto getEcoNewsDto(EcoNews ecoNews, List<String> list) {
         User author = ecoNews.getAuthor();
-        var ecoNewsAuthorDto = new EcoNewsAuthorDto(author.getId(),
-            author.getName());
+        var ecoNewsAuthorDto = new EcoNewsAuthorDto(author.getId(), author.getName());
 
         return EcoNewsDto.builder()
             .id(ecoNews.getId())
@@ -638,7 +608,11 @@ public class EcoNewsServiceImpl implements EcoNewsService {
         User user = modelMapper.map(byEmail, User.class);
         toSave.setAuthor(user);
         if (image != null) {
-            toSave.setImagePath(fileService.upload(image));
+            try {
+                toSave.setImagePath(userRemoteClient.uploadFile(image));
+            } catch (WebClientRequestException | WebClientResponseException e) {
+                log.warn(AppConstant.USER_SERVICE_UNAVAILABLE_LOG, e.getMessage());
+            }
         }
 
         Set<String> tagsSet = new HashSet<>(addEcoNewsDtoRequest.getTags());
@@ -656,7 +630,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
         try {
             ecoNewsRepo.save(toSave);
         } catch (Exception e) {
-            fileService.delete(toSave.getImagePath());
+            userRemoteClient.deleteFile(toSave.getImagePath());
             throw new NotSavedException(ErrorMessage.ECO_NEWS_NOT_SAVED);
         }
         return toSave;
@@ -695,6 +669,8 @@ public class EcoNewsServiceImpl implements EcoNewsService {
             predicates.add(criteriaBuilder.equal(followers.get(ECO_NEWS_AUTHOR_ID), currentUserId));
         }
 
+        predicates.add(criteriaBuilder.equal(root.get("hidden"), false));
+
         Predicate result;
         if (predicates.size() == 1) {
             result = predicates.getFirst();
@@ -716,19 +692,13 @@ public class EcoNewsServiceImpl implements EcoNewsService {
             : criteriaBuilder.or(predicateList.toArray(new Predicate[0]));
     }
 
-    private Long getUserIdByEmail(String email) {
-        return userRepo.findByEmail(email)
-            .map(User::getId)
-            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
-    }
-
     /**
      * {@inheritDoc}
      */
     @CacheEvict(value = CacheConstants.NEWEST_ECO_NEWS_CACHE_NAME, allEntries = true)
     @Override
-    public void setHiddenValue(Long id, UserVO user, boolean value) {
-        if (user.getRole() != Role.ROLE_ADMIN) {
+    public void setHiddenValue(Long id, UserClaims userClaims, boolean value) {
+        if (!userClaims.roles().contains(Role.ROLE_ADMIN)) {
             throw new BadRequestException(ErrorMessage.USER_HAS_NO_PERMISSION);
         }
         EcoNews ecoNews = findEcoNewsById(id);
@@ -760,7 +730,8 @@ public class EcoNewsServiceImpl implements EcoNewsService {
 
             if (econewsAuthor != null) {
                 userNotificationService.removeActionUserFromNotification(
-                    modelMapper.map(econewsAuthor, UserVO.class), userVO, ecoNews.getId(), NotificationType.EVENT_LIKE);
+                    modelMapper.map(econewsAuthor, UserVO.class), userVO, ecoNews.getId(),
+                    NotificationType.ECONEWS_LIKE);
             }
             return true;
         }
@@ -801,15 +772,16 @@ public class EcoNewsServiceImpl implements EcoNewsService {
 
         removeDislikeIfExists(ecoNews, userVO);
 
+        boolean isLiked = ecoNews.getUsersLikedNews().stream()
+            .noneMatch(u -> u.getId().equals(userVO.getId()));
+
+        sendNotification(ecoNews, userVO, isLiked);
+
         ecoNews.getUsersLikedNews().add(modelMapper.map(userVO, User.class));
         achievementCalculation.calculateAchievement(userVO,
             AchievementCategoryType.LIKE_NEWS, AchievementAction.ASSIGN);
         ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("LIKE_NEWS"), userVO);
 
-        boolean isLiked = ecoNews.getUsersLikedNews().stream()
-            .noneMatch(u -> u.getId().equals(userVO.getId()));
-
-        sendNotification(ecoNews, userVO, isLiked);
         return modelMapper.map(ecoNews, EcoNewsDto.class);
     }
 
